--- a/Rapport/figures/Output3.tex
+++ b/Rapport/figures/Output3.tex
@@ -600,7 +600,7 @@ table[row sep=crcr]{%
 9.6705625	-0.0414611130332669\\
 9.67058333333333	0.0437079231812153\\
 };
-\addplot [color=black,solid,forget plot]
+\addplot [color=orange,solid,forget plot]
   table[row sep=crcr]{%
 9.65879166666667	0.819947271637319\\
 9.6588125	0.768423169556426\\
