--- a/Rapport/1Chapters/RMS/Design.tex
+++ b/Rapport/1Chapters/RMS/Design.tex
@@ -29,19 +29,27 @@ In order to implement this most efficiently it is set to 16 samples which makes 
 The sample size is adjusted again in order to avoid division in the DSP which results in a sample size of 128 samples. 
 
 \subsection*{Threshold}
-From \autoref{app:journal_speaker_test} it is assumed that the gain throughout the system will be 37 dB, however the maximum output from the DSP is 0.5 $\text{V}_\text{RMS}$ which means the gain should be 40 dB. With this gain it is possible to achieve sound pressures of upwards of 105 dB with a maximum input of 0.5 $\text{V}_\text{RMS}$. The limiters are only going to be activated when the power goes above the recommended 150 W. With a gain of 40 dB the linear gain is 100.
+From \autoref{app:journal_speaker_test} it is assumed that the gain throughout the system will be 37 dBu (34 dBv), however the maximum output from the DSP is 0.5 $\text{V}_\text{RMS}$ which means the gain should be 40 dB. The limiters are only going to be activated when the power goes above the recommended 150 W. With a gain of 40 dB the linear gain is 100.
 
 It is now possible to determine the threshold in the DSP. From requirement 10 the threshold should be 150 W.  This means effectively that the threshold in the DSP is governed by equation \ref{eq:Thresgain} and determined in equation \ref{eq:Threscalculated}.
 \vspace{-3mm}
 \begin{align}
 \text{P}&=\frac{(\text{Threshold} \cdot \text{G})^2}{\text{R}} \enhed{W}\label{eq:Thresgain}
 \\
-\text{Threshold}&=\frac{\sqrt{150 \text{ W} \cdot 6 \Omega }}{100}=0.4237\enhed{.}\label{eq:Threscalculated}
+\text{\text{Threshold}}&=\frac{\sqrt{150 \text{ W} \cdot 6 \Omega }}{100}=0.3\enhed{V}\label{eq:Threscalculated}
 \end{align}
-
+\begin{where}
+\va{$G$}{is the total gain of the system, equal to 40 dB}{.}
+\va{$R$}{is the impedans of the loudspeaker, equal to 6 $\Omega$}{$\Omega$}
+\end{where}
+Because the threshold should be in relation to an internal value in the DSP the result of \autoref{eq:Threscalculated} it is divided with 0.5 $\text{V}_\text{RMS}$.
+\begin{equation}
+\text{Threshold}_\text{DSP}= \frac{0.3 \text{V}_\text{RMS}}{0.5 \text{V}_\text{RMS}} = 0.6 \enhed{.}
+\end{equation}
+This threshold should be used in the DSP when implementing.
 %Now that the Threshold is determined for the entire system it is suitable to place the threshold lower for first and second band. Since the combined threshold will be larger than the individual bands. 
 
-<<<<<<< HEAD
+
 % \subsubsection*{Resolution}
 
 % The system will be using a lookup table to determined the correct gain when the RMS is calculated. The RMS values will hence need to be quantized in order to reduce the amount of memory cells used. When the the steps are calculated it is important to determine the jumps size of the steps. The steps are not to be hearable. It is determined to use steps of 0.01 since it is subjectively seen as below the audible threshold when changing gain level. The reason for choosing a linear steps size rather than dB lies in the RMS value being of a linear scale. The RMS value will be changing linearly hence the lookup tables needs to be as well. The tables are constructed with by the use of \autoref{eq:Threslookup}. The equation calculates the needed attenuation when the threshold is exceeded and does so with a predefined step resolution. 
@@ -56,7 +64,7 @@ It is now possible to determine the threshold in the DSP. From requirement 10 th
 % When the equation has calculated for 1024 values, these are stored in a array and converted to Q15 written in hexadecimals for implementation into the DSP.
 % The script for creating the values are located on a MATLAB script at: \\
 % \path{CD://CD/Something Somethin}
-=======
+
 %\subsubsection*{Resolution}
 %
 %The system will be using a lookup table to determined the correct gain when the RMS is calculated. The RMS values will hence need to be quantized in order to reduce the amount of memory cells used. When the the steps are calculated it is important to determine the jumps size of the steps. The steps are not to be hearable. It is determined to use steps of 0.01 since it is subjectively seen as below the audible threshold when changing gain level. The reason for choosing a linear steps size rather than dB lies in the RMS value being of a linear scale. The RMS value will be changing linearly hence the lookup tables needs to be as well. The tables are constructed with by the use of \autoref{eq:Threslookup}. The equation calculates the needed attenuation when the threshold is exceeded and does so with a predefined step resolution. 
@@ -71,7 +79,7 @@ It is now possible to determine the threshold in the DSP. From requirement 10 th
 %When the equation has calculated for 1024 values, these are stored in a array and converted to Q15 written in hexadecimals for implementation into the DSP.
 %The script for creating the values are located on a MATLAB script at: \\
 %\path{CD://CD/Something Somethin}
->>>>>>> ef0dd18352f05c673bb9f3b882688db0e5d086f2
+
 
 
 
