fix listening test

--- a/Rapport/2Appendix/ListningTest.tex
+++ b/Rapport/2Appendix/ListningTest.tex
@@ -1,19 +1,16 @@
 \chapter{Listning Test}\label{app:journal_ListningTest}
 
-This test was performed to investigated whether it is more pleasant to listen to a multi-band compressor or a single-band compressor. In order to give a broad selection of answers 10 people were randomly chosen to listen to four different types of music without knowing what type of effect block they were subjected to.
-
+This test was performed to investigated whether it is more pleasant to listen to a multi-band limiter or a single-band limiter. In order to give a broad selection of answers 10 people were randomly chosen to listen to four different types of music without knowing if they were listening to a multi-band limiter or single-band.
 
 \section{Setup}
 
-
-
 \begin{itemize}\addtolength{\itemsep}{-.35\baselineskip} 
-\item A Person will be placed approximately 2-3 meters from the loudspeaker
+\item A participant will be placed approximately 2-3 meters from the loudspeaker
 \item The speaker will be driven by a Crown Studio Reference I amplifier.
-\item The person will be placed directly in front of a single speaker
-\item The power of the speaker will be adjusted to output a \gls{SPL} of approximately 80-83 dB(A)
-\item The playback unit will be a computer
-\item The playback unit will be connected via. 3.5 mm minijack cable to the amplifier
+\item The participant will be placed directly in front of a single speaker.
+\item The power of the speaker will be adjusted to output a \gls{SPL} of approximately 80-83 dB(A).
+\item The playback unit will be a computer.
+\item The playback unit will be connected via. 3.5 mm mini jack cable to the amplifier.
 \end{itemize}
 \vspace{-5mm}
 Furthermore the speaker will be placed in a listing room to give as natural a response as possible. The room conforms with the ITU-R BS775-1 standard for multichannel systems.
@@ -27,10 +24,10 @@ The clips used are originating from following songs:
 \item Hearth Of Courage by Two Steps From Hell
 \end{enumerate}
 Test clips can be found on \path{CD://ListningTestFiles/RefX.wav} where X corresponds to the index number of the song.
-The Songs are mastered with the following effectblocks via Logic Pro:
+The songs are mastered with the following effect blocks via Logic Pro:
 
 \noindent\begin{minipage}[t]{0.5\linewidth}
-    \textbf{Singleband:}
+    \textbf{Single-band:}
     \begin{itemize}\addtolength{\itemsep}{-.35\baselineskip} 
     \item 1 band in entire frequency spectrum
     \item 12 dB attenuation at 0 dBFS
@@ -38,7 +35,7 @@ The Songs are mastered with the following effectblocks via Logic Pro:
     \end{itemize}
     \end{minipage}%
     \begin{minipage}[t]{0.5\linewidth}
-    \textbf{Multiband:}
+    \textbf{Multi-band:}
     \begin{itemize}\addtolength{\itemsep}{-.35\baselineskip} 
     \item 1 band from 0 to 100 Hz
     \item 1 band from 100 to 300 Hz
@@ -51,8 +48,8 @@ Test clips can be found on \path{CD://ListningTestFiles/} as \path{MultiX.wav} a
 
 
 
-\subsection*{Test Setup}
-The setup inside the rooms is done as displayed on \autoref{figure:SpeakertestSetupListning}. The Person is placed in a chair in front of one speaker.
+\subsection*{Setup}
+The setup inside the room is done as displayed on \autoref{figure:SpeakertestSetupListning}. The participant is placed in a chair in front of one speaker.
 \begin{figure}[H]
 \centering
 \tikzsetnextfilename{TestSetupListning}
@@ -88,7 +85,7 @@ The setup inside the rooms is done as displayed on \autoref{figure:SpeakertestSe
 
 \section{Procedure}\label{sec:SpeakerTestProcedure3}
 
-The producer for this experiment is described as follows:
+The procedure for this test is described as follows:
 \vspace*{-5mm}
 \begin{enumerate}\addtolength{\itemsep}{-.35\baselineskip} 
 \item Adjust volume of \gls{SPL} on all songs to approximately 80-83 dB.
@@ -100,16 +97,15 @@ The producer for this experiment is described as follows:
 \end{enumerate}
 
 \section{Data Extraction}
-The answers given by the test subjects are located
 The recordings can be found on:\\
 \scalebox{0.7}{
 \path{CD://ListningTestFiles/Lyttetest.excel}}\\
-All of the data is inserted in tables where an x is placed on the outcome. The tables are shown in raw format in section \ref{sec:rawdata_listning}.
+All of the data is inserted in tables where an x is the outcome. The tables are shown in raw format in section \ref{sec:rawdata_listning}.
 
 
 
 \section{Raw data}\label{sec:rawdata_listning}
-The following sections shows tables where the discrete value of each trail is noted. A is multiband and B is singleband. The X marks the most favourable. 
+The following section shows the table of the outcomes. A is multi-band and B is single-band. The X marks the favoured track. 
 \begin{figure}[H]
 \centering
 \begin{subfigure}[t]{0.20\textwidth}
@@ -202,7 +198,7 @@ n          & A         & B         & A         & B        \\ \bottomrule
 
 \vspace*{-5mm}
 \section{Analysis}
-The Raw data is first visualized in a pie chart, which creates a overview of how the answers of the test were placed. In \autoref{fig:piechartsongs} it shows this overview.
+The raw data is first visualized in a pie chart in \autoref{fig:piechartsongs}, which creates an overview of the distribution of favoured answers.
 \begin{figure}[H]
 \centering
 \resizebox{0.5\textwidth}{!}{
@@ -231,7 +227,7 @@ The Raw data is first visualized in a pie chart, which creates a overview of how
 \label{fig:piechartsongs}
 \end{figure}
 
-The raw data is further visualized in a bar chart showed in \autoref{fig:Barchartsongs} showing more a more in-depth visualization acording to each song. The bars are plotted showing the singleband and multiband compared directly to each other.
+The raw data is further visualized in a bar chart showed in \autoref{fig:Barchartsongs} showing a more in-depth visualization according to each song. The bars are plotted showing the single-band and multi-band compared directly to each other.
 \begin{figure}[H]
 \centering
 \tikzsetnextfilename{Barchartsongs}
@@ -260,16 +256,16 @@ The raw data is further visualized in a bar chart showed in \autoref{fig:Barchar
 \label{fig:Barchartsongs}
 \end{figure}
 
-\autoref{fig:piechartsongs} shows a strong tendency to the sound of a multiband compressor. Songs with a high using a high dynamic range shows a pattern of beeing more even more favourable with the mulitband compressor. This correlates to the fact that the singleband are to aggresive when attenuating. The sound becomes to distorted. This is especially the result of song 4. However, from \autoref{fig:Barchartsongs} the test result also shows that it becomes less important when more the clip contains more instruments in play at the same time. It shows that song 2 was slightly less attractive with the multiband. 
+\autoref{fig:piechartsongs} shows a strong preference to the limitation of a multi-band limiter. Limitation of songs with a high dynamic range shows a pattern of being favourable with the mulit-band limiter. This correlates to the fact that the single-band distributes the compression across the whole spectrum and therefore giving a greater sensation of more compression. The result is a distorted sound. This is especially true for the 4th test song.
 
 
 \section{Error sources}
 
-There are two sources of error which could change the outcome of the result. The first error source is from the effect blocks used. They are not identical with the system developed and might be different in perception. The most dominant error source is the amount of people used in the test. There are only 10 people used in the experiment which might not be a sufficient enough sample.
+There are two sources of error which could change the outcome of the result. The first error source is from the effect blocks used. They are not entirely identical with the system developed and might be different in perception. The most dominant error source is the amount of people used in the test. There are only 10 people used in the experiment which might not be a sufficient enough sample size.
 
 \section{Conclusion}
 
-The test showed a clear tendency of the multiband being more favourable when subjected to songs in the genres, dance, acoustics, pop/rock and instrumental. It showed that the singleband compressor had to much attenuation which made the music to distorted hence not favourable. The multiband compressor had better chance of only attenuating the problem frequencies.
+The test showed a clear preference to the multi-band when subjected to songs in the genres, dance, acoustics, pop/rock and instrumental. It showed that the single-band limiter sounded too distorted hence not favourable. The multi-band limiter only compressed lower frequencies, and therefore less in the upper spectrum. This gives a sensation of less compression.
 
 
 
